LPS-124516 Fix alignment of info icon

--- a/modules/dxp/apps/portal-workflow/portal-workflow-kaleo-designer-web/src/main/resources/META-INF/resources/designer/css/main.scss
+++ b/modules/dxp/apps/portal-workflow/portal-workflow-kaleo-designer-web/src/main/resources/META-INF/resources/designer/css/main.scss
@@ -271,6 +271,10 @@
 	background: #fff;
 }
 
+.info-bar-container .management-bar-header-right {
+	margin-right: 0;
+}
+
 .info-bar-container .info-bar-default .btn-secondary.sidenav-transition {
 	pointer-events: none;
 }
